--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="../src/images/favicon.ico">
     <style>
       * {
         font-family: "Open Sans", sans-serif;
